fixed js collapse

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,7 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
 body{
   padding-top: 50px;
-  padding-bottom: 0;
+  padding-bottom: 0px;
 }
 /* nav bar and h1 header with arvo font*/
 ul.nav,.jumbotron h1{
@@ -20,6 +20,7 @@ ul.nav{
 	position: fixed;
 	bottom: 20px;
 	right: 20px;
+	position: absolute;
 
 }
 
@@ -93,6 +94,7 @@ footer{
 	padding-top: 150px;
 	padding-bottom: 30px;
 	text-align: left;
+	position: relative;
 
 }
 /*responsive styling*/
